style: fix text alignment for server icons

--- a/client/style.css
+++ b/client/style.css
@@ -641,12 +641,13 @@ body {
 
 .server p {
 	position: absolute;
-	top: calc(50% - 4px);
+	top: calc(50%);
 	transform: translateY(-50%);
 	left: 0;
 	text-align: center;
 	width: 100%;
 	height: 50%;
+	font-size: 16px;
 	color: white;
 	font-weight: bold;
 }
